# CMakeSeries

./: CMake CheatSheet.docx  README.md
Ep0010/source/: CMakeLists.txt
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt
Ep005/source/include/: dog.h
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/logger/src/: log.cpp
Ep008/source/: CmakeLists.txt
Ep008/source/stats/include/: stats.h
Ep009/source/: CMakeLists.txt  main.cpp
Ep009/source/math/: math.cmake
Ep009/source/stats/: stats.cmake
Ep010/source/math/: CMakeLists.txt
Ep010/source/stats/: CMakeLists.txt
